# University-CSD

./: README.md
Bioinformatics-CS390.51/Project_390/: code.R
Bioinformatics-CS390.51/raskisi1_4730/: gluconeogenesis.txt  glycolysis.txt  raskisi1.R
Compilers-CS340/: README.md
Files and Databases-CS360/project360/: pom.xml
Human Computer Interaction-CS364/ex1-4730/: ex1.html  styles.css
Object-Oriented Programming-CS252/: DrawF.java
Operation Systems-CS345/A1/: Makefile  README.txt  myshell.c  myshell.h
Operation Systems-CS345/A2/: readingroom.c  road.c  street.h
Operation Systems-CS345/A3/: Makefile  d_params.h  get_task_params.c  set_task_params.c  syscall_table_32.S  syscalls.h
Operation Systems-CS345/A4/: README.md
Programming-CS150/Assignment1_4730/: CMakeLists.txt  HelloWorld.cpp  askisi1_1.cpp  askisi1_2.cpp  askisi1_3.cpp  askisi1_4.cpp  askisi1_5.cpp  std_lib_facilities.h
Programming-CS150/Assignment2_4730/: CMakeLists.txt  askisi2_1.cpp  askisi2_2.cpp  askisi2_2.h  askisi2_3.cpp
Programming-CS150/Assignment2_4730/askisi2_4/: CMakeLists.txt  askisi2_4.cpp
Programming-CS150/Assignment2_4730/askisi2_4/ask2_4/: CMakeLists.txt  ask2_4.cpp  ask2_4.h
Programming-CS150/Assignment4_4730/: askisi4.cpp  askisi4.h
Programming-CS150/final_4730/: CMakeLists.txt  final1.cpp  final2.cpp  final3.cpp  final3.h
Systems Programming-CS255/ex1/: main.c
Systems Programming-CS255/ex2/: README.md  main.c  mystring.h  mystring_ars.c  mystring_ptrs.c
Systems Programming-CS255/ex3/: MakeFile  symtable.h  symtablehash.c  symtablelist.c  testsymtab.c
(+157 files in other folders)
