cmake_minimum_required(VERSION 3.1.4)

project(hw1)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_CXX_EXTENSIONS ON)

add_executable(HelloWorld HelloWorld.cpp)

add_executable(askisi1_1 askisi1_1.cpp)

add_executable(askisi1_2 askisi1_2.cpp)

add_executable(askisi1_3 askisi1_3.cpp)

add_executable(askisi1_4 askisi1_4.cpp)

add_executable(askisi1_5 askisi1_5.cpp)

